kubernetes/apps/monitoring/grafana/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  labels:
    ipallowlist: "true"
  annotations:
    gatus.home-operations.com/endpoint: |
      url: http://grafana.monitoring.svc.cluster.local:80
      alerts:
        - type: discord
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - grafana.axis.scottmckendry.tech
  rules:
    - backendRefs:
        - name: grafana
          port: 80
